--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,10 @@
+# secrets
+.env
+src/common/secrets.py
+venv
+**.DS_Store
+**.idea
+
 # Byte-compiled / optimized / DLL files
 __pycache__/
 *.py[cod]
